fixed various bugs

--- a/project_4_mc/.vscode/settings.json
+++ b/project_4_mc/.vscode/settings.json
@@ -82,6 +82,7 @@
         "map": "cpp",
         "set": "cpp",
         "memory_resource": "cpp",
-        "stop_token": "cpp"
+        "stop_token": "cpp",
+        "filesystem": "cpp"
     }
 }
