removed CMakeCache files

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,5 @@
 # Ignore vs stuff
 .vs/*
 
-# ignore eigen
-project_*_*/code/cpp/src/Eigen
-
-# Ignore Data Files
-data/*
-project_*_*/code/data/*
-project_*_*/code/cpp/data/*
-project_*_*/code/python/data/*
+# Ignore CMakeCache
+build/CMakeCache.txt
