updated gitignore to ignore user cmake stuff

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,15 @@
 # Ignore vs stuff
 .vs/*
 
-# Ignore CMakeCache
-build/CMakeCache.txt
+# Ignore cmake stuff
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
